--- a/contact_us.html
+++ b/contact_us.html
@@ -110,14 +110,14 @@
                 </div>
                 <div class="team_member">
                     <div class="team_photo">
-                        <img src="pictures/team1.png" alt="">
+                        <img src="pictures/team2.png" alt="">
                     </div>
                     <div class="team_info">
-                        <h3>Group manager</h3> 
+                        <h3>Unit manager</h3> 
                         <p>
-                            <br>Name:                            Aivy Tee
-                            <br>Contact Number:          012-7200251 
-                            <br>Email:                             aivyai10389@gmail.com
+                            <br>Name:                           Jason Liew
+                            <br>Contact Number:          011-16772315 
+                            <br>Email:                             Jasonllh6872@gmail.com
                         </p>
                         <hr>
 
@@ -125,32 +125,47 @@
                 </div>
                 <div class="team_member">
                     <div class="team_photo">
-                        <img src="pictures/team1.png" alt="">
+                        <img src="pictures/team3.png" alt="">
                     </div>
                     <div class="team_info">
-                        <h3>Group manager</h3> 
+                        <h3>Agent</h3> 
                         <p>
-                            <br>Name:                            Aivy Tee
-                            <br>Contact Number:          012-7200251 
-                            <br>Email:                             aivyai10389@gmail.com
+                            <br>Name:                            Dennis Tan
+                            <br>Contact Number:          016-7927132 
+                            <br>Email:                             dennis870924@gmail.com
                         </p>
                         <hr>
-
+                        <p>全民 100</p>
                     </div>
                 </div>
                 <div class="team_member">
                     <div class="team_photo">
-                        <img src="pictures/team1.png" alt="">
+                        <img src="pictures/team4.png" alt="">
                     </div>
                     <div class="team_info">
-                        <h3>Group manager</h3> 
+                        <h3>Agent</h3> 
                         <p>
-                            <br>Name:                            Aivy Tee
-                            <br>Contact Number:          012-7200251 
-                            <br>Email:                             aivyai10389@gmail.com
+                            <br>Name:                            Lau Pau Swoon
+                            <br>Contact Number:          014-9813505 
+                            <br>Email:                             swoon1427@gmail.com
                         </p>
                         <hr>
-
+                        <p>MDRT 2022</p>
+                    </div>
+                </div>
+                <div class="team_member">
+                    <div class="team_photo">
+                        <img src="pictures/team5.png" alt="">
+                    </div>
+                    <div class="team_info">
+                        <h3>Agent</h3> 
+                        <p>
+                            <br>Name:                            Lau Pau Swoon
+                            <br>Contact Number:          014-9813505 
+                            <br>Email:                             swoon1427@gmail.com
+                        </p>
+                        <hr>
+                        <p>MDRT 2022</p>
                     </div>
                 </div>
             </div>
