--- a/index.html
+++ b/index.html
@@ -58,10 +58,14 @@
                     <img src="pictures/jv_group.jpg" alt="Image 1">
                 </div>
                 <div class="carousel-item">
-                    <img src="pictures/jv_group.jpg" alt="Image 2">
+                    <video controls>
+                        <source src="Jv_video1.mp4" type="video/mp4">
+                      </video>
                 </div>
                 <div class="carousel-item">
-                    <img src="pictures/jv_group.jpg" alt="Image 3">
+                    <video controls>
+                        <source src="Jv_video2.mp4" type="video/mp4">
+                      </video>
                 </div>
                 <!-- Add more carousel-item divs for additional images -->
             </div>
