--- a/contact_us.html
+++ b/contact_us.html
@@ -107,7 +107,7 @@
                         <hr>
                         <div class="award">
                             <h4>Personal Award</h4>
-                            <p></p>
+                            <p>MDLA 2020</p>
                         </div>
                     </div>
                 </div>
@@ -125,7 +125,7 @@
                         <hr>
                         <div class="award">
                             <h4>Personal Award</h4>
-                            <p></p>
+                            <p>MDRT 2024</p>
                         </div>
                     </div>
                 </div>
@@ -143,7 +143,7 @@
                         <hr>
                         <div class="award">
                             <h4>Personal Award</h4>
-                            <p>Starlight 100</p>
+                            <p>Star Light 100</p>
                         </div>
                     </div>
                 </div>
