--- a/test1.html
+++ b/test1.html
@@ -60,6 +60,8 @@
             <img src="pictures/vission.png" alt="">
             <img src="pictures/value.png" alt="">
         </div> -->
+    <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fcheng.meparu%2Fposts%2Fpfbid0j6pZZgGoQJAWeBqoTVGywiiz91NdGmQ8TFs7ELseuFpjcwjLYprRXi9YWYo8JqKsl&show_text=true&width=500" width="500" height="0" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+
     </div>
 
     <script>
