--- a/our_company_zh.html
+++ b/our_company_zh.html
@@ -18,7 +18,7 @@
             </div>
             <nav>
                 <ul id="main-menu">
-                    <li><a href="index_zh.html" class="nav-link" id="homelink">主页</a></li>
+                    <li><a href="index_zh.html" class="nav-link" id="homelink">主页 ▾</a></li>
                     <li>
                         <a href="#" class="nav-link" id="aboutUsLink">关于我们</a>
                         <ul id="dropdownMenu" class="dropdown">
