--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <ul id="main-menu">
                     <li><a href="index.html" class="nav-link" id="homelink">Home</a></li>
                     <li>
-                        <a href="#" class="nav-link" id="aboutUsLink">About Us</a>
+                        <a href="#" class="nav-link" id="aboutUsLink">About Us ▾</a>
                         <ul id="dropdownMenu" class="dropdown">
                             <a href="our_company.html"><li>Our Company</li></a>
                             <a href="v_m_v.html"><li>Vision, Mission & Value</li></a>
