--- a/contact_us.html
+++ b/contact_us.html
@@ -183,6 +183,25 @@
                         </div>
                     </div>
                 </div>
+                <div class="team_member">
+                    <div class="team_photo">
+                        <img src="pictures/team6.png" alt="">
+                    </div>
+                    <div class="team_info">
+                        <h3>Agent</h3> 
+                        <p>
+                            Name:                           Tan Sing Yi
+                            <br>Contact Number:          012-9382203 
+                            <br>Email:                             xinyu_tan2120@hotmail.com
+                        </p>
+                        <hr>
+                        <div class="award">
+                            <h4>Personal Award</h4>
+                            <p>Supremacy</p>
+                            <p>SES</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
