--- a/index.html
+++ b/index.html
@@ -51,11 +51,15 @@
             <input type="radio" name="carousel" id="slide1" checked>
             <input type="radio" name="carousel" id="slide2">
             <input type="radio" name="carousel" id="slide3">
+            <input type="radio" name="carousel" id="slide4">
             <!-- Add more inputs for additional images -->
 
             <div class="carousel-inner">
                 <div class="carousel-item">
                     <img src="pictures/jv_group.jpg" alt="Image 1">
+                </div>
+                <div class="carousel-item">
+                    <img control src="pictures/clam.jpg" alt="Image 2">
                 </div>
                 <div class="carousel-item">
                     <video controls>
@@ -74,11 +78,12 @@
                 <label for="slide1" class="control" id="control1"></label>
                 <label for="slide2" class="control" id="control2"></label>
                 <label for="slide3" class="control" id="control3"></label>
+                <label for="slide4" class="control" id="control4"></label>
                 <!-- Add more labels for additional images -->
             </div>
 
-            <button class="prev" onclick="document.getElementById('slide1').checked ? document.getElementById('slide3').checked = true : document.querySelector('input[name=carousel]:checked').previousElementSibling.checked = true;">&#10094;</button>
-            <button class="next" onclick="document.getElementById('slide3').checked ? document.getElementById('slide1').checked = true : document.querySelector('input[name=carousel]:checked').nextElementSibling.checked = true;">&#10095;</button>
+            <button class="prev" onclick="document.getElementById('slide1').checked ? document.getElementById('slide4').checked = true : document.querySelector('input[name=carousel]:checked').previousElementSibling.checked = true;">&#10094;</button>
+            <button class="next" onclick="document.getElementById('slide4').checked ? document.getElementById('slide1').checked = true : document.querySelector('input[name=carousel]:checked').nextElementSibling.checked = true;">&#10095;</button>
         </div>
         <div class="homecontent">
             <h2 class="scroll-hidden1">Plan ahead and navigate safely</h2>
