--- a/achievement.html
+++ b/achievement.html
@@ -99,7 +99,9 @@
                     <img src="pictures/cc3.jpg" alt="">
                     <img src="pictures/cc5.jpg" alt="">
                     <img src="pictures/cc9.png" alt="">
+                    <img src="pictures/cc21.jpg" alt="">
                     <img src="pictures/cc11.jpg" alt="">
+                    <img src="pictures/cc19.jpg" alt="">
                     <img src="pictures/cc7.png" alt="">
                     <img src="pictures/cc15.jpg" alt="">
                     <img src="pictures/cc17.jpg" alt="">
@@ -107,9 +109,12 @@
                 <div class="second_row" id="cc_slider">
                     <img src="pictures/cc2.jpg" alt="">
                     <img src="pictures/cc8.png" alt="">
+                    <img src="pictures/cc20.jpg" alt="">
                     <img src="pictures/cc4.jpg" alt="">
                     <img src="pictures/cc12.jpg" alt="">
+                    <img src="pictures/cc18.jpg" alt="">
                     <img src="pictures/cc6.jpg" alt="">
+                    <img src="pictures/cc22.jpg" alt="">
                     <img src="pictures/cc10.jpg" alt="">
                     <img src="pictures/cc14.jpg" alt="">
                     <img src="pictures/cc16.jpg" alt="">
