--- a/achievement.html
+++ b/achievement.html
@@ -57,21 +57,16 @@
         <div class="carousel">
             <input type="radio" name="carousel" id="slide1" checked>
             <input type="radio" name="carousel" id="slide2">
-            <input type="radio" name="carousel" id="slide3">
             <!-- Add more inputs for additional images -->
 
             <div class="carousel-inner">
                 <div class="carousel-item">
-                    <img src="pictures/jv_group.jpg" alt="Image 1">
-                    <p>abcdefg bronze</p>
+                    <img src="pictures/ac1.jpg" alt="Image 1">
+                    <p>2019 Leadership Entrepreneurship Building Distinction Award</p>
                 </div>
                 <div class="carousel-item">
-                    <img src="pictures/jv_group.jpg" alt="Image 2">
-                    <p>abcdefg bronze</p>
-                </div>
-                <div class="carousel-item">
-                    <img src="pictures/jv_group.jpg" alt="Image 3">
-                    <p>abcdefg bronze</p>
+                    <img src="pictures/ac2.jpg" alt="Image 2">
+                    <p>2020 Million Dollar League Award CLASSIC</p>
                 </div>
                 <!-- Add more carousel-item divs for additional images -->
             </div>
@@ -79,14 +74,13 @@
             <div class="carousel-controls">
                 <label for="slide1" class="control" id="control1"></label>
                 <label for="slide2" class="control" id="control2"></label>
-                <label for="slide3" class="control" id="control3"></label>
                 <!-- Add more labels for additional images -->
             </div>
 
             <button class="prev"
-                onclick="document.getElementById('slide1').checked ? document.getElementById('slide3').checked = true : document.querySelector('input[name=carousel]:checked').previousElementSibling.checked = true;">&#10094;</button>
+                onclick="document.getElementById('slide1').checked ? document.getElementById('slide2').checked = true : document.querySelector('input[name=carousel]:checked').previousElementSibling.checked = true;">&#10094;</button>
             <button class="next"
-                onclick="document.getElementById('slide3').checked ? document.getElementById('slide1').checked = true : document.querySelector('input[name=carousel]:checked').nextElementSibling.checked = true;">&#10095;</button>
+                onclick="document.getElementById('slide2').checked ? document.getElementById('slide1').checked = true : document.querySelector('input[name=carousel]:checked').nextElementSibling.checked = true;">&#10095;</button>
         </div>
     </div>
 
