--- a/index.html
+++ b/index.html
@@ -120,12 +120,16 @@
             </div>
             <div class="p_s_container">
                 <div class="p_s" onclick="window.location.href='services.html#finance-section'">
-                    <h2>Financial Planning</h2>
-                    <img src="pictures/finance_image.png" alt="">
+                    <h2>Risk Management</h2>
+                    <img src="pictures/legacy_image.png" alt="">
                 </div>
                 <div class="p_s" onclick="window.location.href='services.html#legacy-section'">
-                    <h2>Legacy Planning</h2>
-                    <img src="pictures/legacy_image.png" alt="">
+                    <h2>Insurans Services</h2>
+                    <img src="pictures/healthcare_image.png" alt="">
+                </div>
+                <div class="p_s" onclick="window.location.href='services.html#finance-section'">
+                    <h2>Financial Management</h2>
+                    <img src="pictures/finance_image.png" alt="">
                 </div>
                 <div class="p_s" onclick="window.location.href='services.html#claim-section'">
                     <h2>Claim Support</h2>
