--- a/index_zh.html
+++ b/index_zh.html
@@ -112,12 +112,16 @@
             </div>
             <div class="p_s_container">
                 <div class="p_s" onclick="window.location.href='services.html#finance-section'">
-                    <h2>财务规划</h2>
-                    <img src="pictures/finance_image.png" alt="">
+                    <h2>风险管理</h2>
+                    <img src="pictures/legacy_image.png" alt="">
                 </div>
                 <div class="p_s" onclick="window.location.href='services.html#legacy-section'">
-                    <h2>遗产规划</h2>
-                    <img src="pictures/legacy_image.png" alt="">
+                    <h2>保险服务</h2>
+                    <img src="pictures/healthcare_image.png" alt="">
+                </div>
+                <div class="p_s" onclick="window.location.href='services.html#finance-section'">
+                    <h2>财务管理</h2>
+                    <img src="pictures/finance_image.png" alt="">
                 </div>
                 <div class="p_s" onclick="window.location.href='services.html#claim-section'">
                     <h2>理赔服务</h2>
