--- a/services.html
+++ b/services.html
@@ -34,7 +34,7 @@
                     <li><a href="career.html" class="nav-link" id="careerLink">Career</a></li>
                     <li>
                         <div class="language-switch">
-                            <a href="index_zh.html" id="languageButton">中文</a>
+                            <a href="services_zh.html" id="languageButton">中文</a>
                         </div>
                     </li>
                 </ul>
@@ -54,19 +54,19 @@
                 <div class="service-item">
                     <a href="#finance-section">
                         <img src="pictures/path-to-financial-icon.png" alt="Financial Planning">
-                        <p>Financial Planning</p>
+                        <p>Risk Management</p>
                     </a>
                 </div>
                 <div class="service-item">
                     <a href="#healthcare-section">
                         <img src="pictures/path-to-healthcare-icon.png" alt="Healthcare Planning">
-                        <p>Healthcare Planning</p>
+                        <p>Insurance Services</p>
                     </a>
                 </div>
                 <div class="service-item">
                     <a href="#legacy-section">
                         <img src="pictures/path-to-legacy-icon.png" alt="Legacy Planning">
-                        <p>Legacy Planning</p>
+                        <p>Financial Management</p>
                     </a>
                 </div>
                 <div class="service-item">
@@ -85,23 +85,22 @@
             <div id="finance-section" class="service-card scroll-hidden">
                 <div class="line-start"></div>
                 <div class="left-column">
-                    <h2>Financial Planning</h2>
+                    <h2>Risk Management</h2>
                     <p>We help you set goals, manage investments, and grow your wealth.</p>
                     <img src="pictures\finance_image.png" alt="财务规划图片">
                 </div>
                 <div class="line-center"></div>
                 <div class="right-column">
-                    <p>Financial planning involves managing income, expenses, savings, investments, and insurance to
-                        help individuals or families achieve their financial goals and maintain financial health.
-                        <br> Planning helps allocate resources wisely, ensures future financial stability and security,
-                        prepares for potential economic risks, and supports long-term goals such as retirement,
-                        education, and home ownership.
+                    <p>Risk management is the process of ensuring the financial security of an individual or business by identifying, assessing and responding to potential risks. It involves legal, fiduciary, income protection and other strategies designed to mitigate the financial burden of unexpected and unpredictable events.
+                        <br> Life is full of uncertainties and sudden surprises, such as a major illness, unexpected death or disruption to income, can place an unsustainable financial burden on a family or business. Through risk management, you can plan ahead to ensure that your finances remain protected in the event of an unfavourable event, avoiding major shocks to your family and business.
                         <br>
-                        <br>Financial planning include ：
+                        <br>Scope of Services:
                     <ul>
-                        <li>Family Trust</li>
-                        <li>Business Trust</li>
-                        <li>Living Trust</li>
+                        <li>Wills Writing</li>
+                        <li>Business Value Protection Trust</li>
+                        <li>Income Replacement</li>
+                        <li>Debts Cancellation</li>
+                        <li>etc</li>
                     </ul>
                     </p>
                 </div>
@@ -110,23 +109,23 @@
             <div id="healthcare-section" class="service-card scroll-hidden1">
                 <div class="line-start"></div>
                 <div class="left-column">
-                    <h2>Healthcare Planning</h2>
+                    <h2>Insurance Services</h2>
                     <p>We help you plan for immediate and long-term health needs.</p>
                     <img src="pictures\healthcare_image.png" alt="医疗规划图片">
                 </div>
                 <div class="line-center"></div>
                 <div class="right-column">
-                    <p>Healthcare planning involves organizing and managing personal or family healthcare needs,
-                        including selecting appropriate insurance, setting up emergency medical funds, and planning for
-                        long-term care.
-                        <br>Healthcare planning ensures access to necessary medical services in case of health issues,
-                        reduces the financial impact of medical expenses, and supports long-term health and well-being.
+                    <p>Insurance Services protects individuals and businesses from unpredictable losses by providing a variety of insurance products (e.g., medical, fire, auto, etc.). By sharing the loss, insurance companies ensure that their clients do not face an undue financial burden in the event of a catastrophe.
+                        <br>Accidents and risks cannot be avoided, but by purchasing insurance, you can gain financial protection in the event that you are faced with unexpected situations such as medical expenses, fires, car accidents, and more. Insurance allows you to avoid high costs, ensures that you and your family do not face financial hardship when faced with unpredictable risks, and helps to quickly get your life back on track.
                         <br>
-                        <br>Healthcare planning include :
+                        <br>Scope of Services:
                     <ul>
-                        <li>Life Insurance (Term, Whole Life, Investment-linked)</li>
-                        <li>Medical Insurance (Individual / Group Medical Insurance, Critical Illness Insurance)</li>
-                        <li>Accident Insurance (Individual / Travel / Family Accident Insurance)</li>
+                        <li>Medical Protection</li>
+                        <li>Disease Living Protection</li>
+                        <li>Fire Insurance</li>
+                        <li>Travel Insurance</li>
+                        <li>Motor Vehicle Insurance</li>
+                        <li>etc</li>
                     </ul>
                     </p>
                 </div>
@@ -135,22 +134,22 @@
             <div id="legacy-section" class="service-card scroll-hidden">
                 <div class="line-start"></div>
                 <div class="left-column">
-                    <h2>Legacy Planning</h2>
+                    <h2>Financial Management</h2>
                     <p>We assist with wills, trusts, and charitable giving to preserve your assets.</p>
                     <img src="pictures\legacy_image.png" alt="财务规划图片">
                 </div>
                 <div class="line-center"></div>
                 <div class="right-column">
-                    <p>Legacy planning is the process of making arrangements during one’s lifetime to ensure that assets
-                        are passed on according to personal wishes after death, while minimizing tax burdens and legal
-                        disputes.
-                        <br>Legacy planning helps preserve family wealth, ensures fair distribution of assets, prevents
-                        family disputes over inheritance, and effectively reduces estate taxes.
+                    <p>Financial management is a set of long-term strategies including retirement planning, children's education fund, investment management and other services, which aim to achieve individual or family financial goals through saving, investing and planning. These plans help you to obtain a stable source of income and increase your wealth in the future.
+                        <br>Financial management helps you to be well-prepared for the future, whether it's for retirement security, children's education expenses, or wealth enhancement. Through systematic savings and investment, you can ensure your future financial security and avoid shortfalls due to lack of planning, while helping you steadily achieve your long-term financial goals.
                         <br>
-                        <br>Legacy planning include :
+                        <br>Scope of Services:
                     </p>
                     <ul>
-                        <li>Will</li>
+                        <li>Retirement Planning</li>
+                        <li>Child Education</li>
+                        <li>Fund Investment</li>
+                        <li>etc</li>
                     </ul>
                     </p>
                 </div>
@@ -172,12 +171,7 @@
                         compensation they deserve, reduces complexity and stress in the claims process, and protects
                         clients' legal rights.
                         <br>
-                        <br>Claim Support include :
-                    <ul>
-                        <li>Life Insurance (Term, Whole Life, Investment-linked)</li>
-                        <li>Medical Insurance (Individual / Group Medical Insurance, Critical Illness Insurance)</li>
-                        <li>Accident Insurance (Individual / Travel / Family Accident Insurance)</li>
-                    </ul>
+                        
                 </div>
             </div>
         </div>
