--- a/our_company_zh.html
+++ b/our_company_zh.html
@@ -18,9 +18,9 @@
             </div>
             <nav>
                 <ul id="main-menu">
-                    <li><a href="index_zh.html" class="nav-link" id="homelink">主页 ▾</a></li>
+                    <li><a href="index_zh.html" class="nav-link" id="homelink">主页</a></li>
                     <li>
-                        <a href="#" class="nav-link" id="aboutUsLink">关于我们</a>
+                        <a href="#" class="nav-link" id="aboutUsLink">关于我们 ▾</a>
                         <ul id="dropdownMenu" class="dropdown">
                             <a href="our_company_zh.html"><li>我们的公司</li></a>
                             <a href="v_m_v_zh.html"><li>愿景，使命与价值</li></a>
