--- a/index_zh.html
+++ b/index_zh.html
@@ -92,20 +92,22 @@
         </div>
     </div>
 
-    <div class="our_company_summary scroll-hidden1">
-        <h2>JV Wealth 致力于
-            <br><span class="green">您的生活</span>和<span class="green">未来</span></h2>
-        <p>JV Wealth Advisory 是一家致力于为客户提供全面财务规划和财富管理服务的公司。公司总部位于马来西亚新山市新山再也，.......</p>
-        <div class="custom-hr">
-            <span> <a href="our_company_zh.html">更加详细</a></span> <!-- 可放置文字或留空 -->
-        </div>
-        <div class="data_container">
-            <p class="data"><span class="green">13</span><br>经验年限</p>
-            <p class="data"><span class="green">5</span><br>战略合作伙伴</p>
-            <p class="data"><span class="green">10++</span><br>专业代理</p>
-        </div>
-        <div class="img-container">
-            <img src="pictures/our-company_sumary.png" alt="">
+    <div class="our_company_summary">
+        <div class="scroll-hidden1">
+            <h2>JV Wealth 致力于
+                <br><span class="green">您的生活</span>和<span class="green">未来</span></h2>
+            <p>JV Wealth Advisory 是一家致力于为客户提供全面财务规划和财富管理服务的公司。公司总部位于马来西亚新山市新山再也，.......</p>
+            <div class="custom-hr">
+                <span> <a href="our_company_zh.html">更加详细</a></span> <!-- 可放置文字或留空 -->
+            </div>
+            <div class="data_container">
+                <p class="data"><span class="green">13</span><br>经验年限</p>
+                <p class="data"><span class="green">5</span><br>战略合作伙伴</p>
+                <p class="data"><span class="green">10++</span><br>专业代理</p>
+            </div>
+            <div class="img-container">
+                <img src="pictures/our-company_sumary.png" alt="">
+            </div>
         </div>
     </div>
 
