--- a/index.html
+++ b/index.html
@@ -90,21 +90,22 @@
             <p class="scroll-hidden1">Planning ahead is an act of wisdom because life is full of unpredictable risks. Insurance provides safe navigation for your every choice, ensuring you face challenges without worries</p>
         </div>
     </div>
-
-    <div class="our_company_summary scroll-hidden1">
-        <h2>JV Wealth are committed to
-            <br><span class="green">Your Life and Your Future</span></h2>
-        <p>JV Wealth Advisory is a company dedicated to providing comprehensive financial planning and wealth management services to clients. Headquartered in Taman Johor Jaya, Johor Bahru, Malaysia, the company is ....... </p>
-        <div class="custom-hr">
-            <span> <a href="our_company.html">More details</a></span> <!-- 可放置文字或留空 -->
-        </div>
-        <div class="data_container">
-            <p class="data"><span class="green">13</span><br>Year of Experience</p>
-            <p class="data"><span class="green">5</span><br>Strategic Partner</p>
-            <p class="data"><span class="green">10++</span><br>Professional Agent</p>
-        </div>
-        <div class="img-container">
-            <img src="pictures/our-company_sumary.png" alt="">
+    <div class="our_company_summary">
+        <div class="scroll-hidden1">
+            <h2>JV Wealth are committed to
+                <br><span class="green">Your Life and Your Future</span></h2>
+            <p>JV Wealth Advisory is a company dedicated to providing comprehensive financial planning and wealth management services to clients. Headquartered in Taman Johor Jaya, Johor Bahru, Malaysia, the company is ....... </p>
+            <div class="custom-hr">
+                <span> <a href="our_company.html">More details</a></span> <!-- 可放置文字或留空 -->
+            </div>
+            <div class="data_container">
+                <p class="data"><span class="green">13</span><br>Year of Experience</p>
+                <p class="data"><span class="green">5</span><br>Strategic Partner</p>
+                <p class="data"><span class="green">10++</span><br>Professional Agent</p>
+            </div>
+            <div class="img-container">
+                <img src="pictures/our-company_sumary.png" alt="">
+            </div>
         </div>
     </div>
 
@@ -413,7 +414,7 @@
             function slideDivs(direction) {
                 const iframeWrapper = document.querySelector('.iframe-wrapper');
                 const slides = document.querySelectorAll('.iframe-wrapper .slide'); // 选择所有的 div
-                const slideWidth = slides[0].offsetWidth + 15; // 假设每个 div 之间有 margin
+                const slideWidth = slides[0].offsetWidth + 50; // 假设每个 div 之间有 margin
                 const maxIndex = slides.length - 1; // 最后一个 slide 的索引
         
                 currentIndex += direction;
