--- a/contact_us.html
+++ b/contact_us.html
@@ -80,7 +80,7 @@
         </div>
     </div>
 
-    <div class="team scroll-hidden">
+    <div class="team scroll-hidden" id="contact-section">
         <div class="team_bg">
             <div class="team_rec_container"></div>
             <div class="team_tri_container">
