--- a/services.html
+++ b/services.html
@@ -53,25 +53,25 @@
             <div class="services-grid">
                 <div class="service-item">
                     <a href="#finance-section">
-                        <img src="pictures/path-to-financial-icon.png" alt="Financial Planning">
+                        <img src="pictures/path-to-risk-icon.png" alt="Financial Planning">
                         <p>Risk Management</p>
                     </a>
                 </div>
                 <div class="service-item">
                     <a href="#healthcare-section">
-                        <img src="pictures/path-to-healthcare-icon.png" alt="Healthcare Planning">
+                        <img src="pictures/path-to-insurance-icon.png" alt="Healthcare Planning">
                         <p>Insurance Services</p>
                     </a>
                 </div>
                 <div class="service-item">
                     <a href="#legacy-section">
-                        <img src="pictures/path-to-legacy-icon.png" alt="Legacy Planning">
+                        <img src="pictures/path-to-finance-icon.png" alt="Legacy Planning">
                         <p>Financial Management</p>
                     </a>
                 </div>
                 <div class="service-item">
                     <a href="#claim-section">
-                        <img src="pictures/path-to-claim-support-icon.png" alt="Claim Support">
+                        <img src="pictures/path-to-claim-icon.png" alt="Claim Support">
                         <p>Claim Support</p>
                     </a>
                 </div>
@@ -87,7 +87,7 @@
                 <div class="left-column">
                     <h2>Risk Management</h2>
                     <p>We help you set goals, manage investments, and grow your wealth.</p>
-                    <img src="pictures\finance_image.png" alt="财务规划图片">
+                    <img src="pictures\risk_image.png" alt="风险规划图片">
                 </div>
                 <div class="line-center"></div>
                 <div class="right-column">
@@ -111,7 +111,7 @@
                 <div class="left-column">
                     <h2>Insurance Services</h2>
                     <p>We help you plan for immediate and long-term health needs.</p>
-                    <img src="pictures\healthcare_image.png" alt="医疗规划图片">
+                    <img src="pictures\insurance_image.png" alt="保险图片">
                 </div>
                 <div class="line-center"></div>
                 <div class="right-column">
@@ -136,7 +136,7 @@
                 <div class="left-column">
                     <h2>Financial Management</h2>
                     <p>We assist with wills, trusts, and charitable giving to preserve your assets.</p>
-                    <img src="pictures\legacy_image.png" alt="财务规划图片">
+                    <img src="pictures\finance_image.png" alt="财务规划图片">
                 </div>
                 <div class="line-center"></div>
                 <div class="right-column">
@@ -188,10 +188,8 @@
 
             </div>
             <div class="below-contact scroll-hidden">
-                <p>Are you interested? Contact our sales department now !!!</p>
-                <p>Erkan Giris / Sales Manager</p>
-                <p>+0(550) 544 7514</p>
-                <p>sales@crosson.com</p>
+                <p>Are you interested? Contact us now !!!</p>
+                <button class="button" onclick="window.location.href='contact_us.html#contact-section'">click me !!</button>
             </div>
         </div>
     </div>
