--- a/services_zh.html
+++ b/services_zh.html
@@ -53,25 +53,25 @@
             <div class="services-grid">
                 <div class="service-item">
                     <a href="#finance-section">
-                        <img src="pictures/path-to-financial-icon.png" alt="Financial Planning">
+                        <img src="pictures/path-to-risk-icon.png" alt="Financial Planning">
                         <p>风险管理</p>
                     </a>
                 </div>
                 <div class="service-item">
                     <a href="#healthcare-section">
-                        <img src="pictures/path-to-healthcare-icon.png" alt="Healthcare Planning">
+                        <img src="pictures/path-to-insurance-icon.png" alt="Healthcare Planning">
                         <p>保险服务</p>
                     </a>
                 </div>
                 <div class="service-item">
                     <a href="#legacy-section">
-                        <img src="pictures/path-to-legacy-icon.png" alt="Legacy Planning">
+                        <img src="pictures/path-to-finance-icon.png" alt="Legacy Planning">
                         <p>财务管理</p>
                     </a>
                 </div>
                 <div class="service-item">
                     <a href="#claim-section">
-                        <img src="pictures/path-to-claim-support-icon.png" alt="Claim Support">
+                        <img src="pictures/path-to-claim-icon.png" alt="Claim Support">
                         <p>理赔服务</p>
                     </a>
                 </div>
@@ -87,7 +87,7 @@
                 <div class="left-column">
                     <h2>风险管理</h2>
                     <p>We help you set goals, manage investments, and grow your wealth.</p>
-                    <img src="pictures\finance_image.png" alt="财务规划图片">
+                    <img src="pictures\risk_image.png" alt="财务规划图片">
                 </div>
                 <div class="line-center"></div>
                 <div class="right-column">
@@ -111,7 +111,7 @@
                 <div class="left-column">
                     <h2>保险服务</h2>
                     <p>We help you plan for immediate and long-term health needs.</p>
-                    <img src="pictures\healthcare_image.png" alt="医疗规划图片">
+                    <img src="pictures\insurance_image.png" alt="医疗规划图片">
                 </div>
                 <div class="line-center"></div>
                 <div class="right-column">
@@ -136,7 +136,7 @@
                 <div class="left-column">
                     <h2>财务管理</h2>
                     <p>We assist with wills, trusts, and charitable giving to preserve your assets.</p>
-                    <img src="pictures\legacy_image.png" alt="财务规划图片">
+                    <img src="pictures\finance_image.png" alt="财务规划图片">
                 </div>
                 <div class="line-center"></div>
                 <div class="right-column">
