--- a/achievement_zh.html
+++ b/achievement_zh.html
@@ -142,7 +142,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Example Company. All rights reserved.</p>
+            <p>&copy; 2024 JV Wealth Advisory.</p>
         </div>
     </footer>
 
