--- a/contact_us.html
+++ b/contact_us.html
@@ -225,7 +225,23 @@
                             <p>Star Producer</p>
                             <p>Master Sales Award</p>
                         </div>
-                    </div>    
+                    </div> 
+                </div> 
+                    <div class="team_member">
+                        <div class="team_photo">
+                            <img src="pictures/team8.png" alt="">
+                        </div>
+                        <div class="team_info">
+                            <h3>Agent</h3> 
+                            <p>
+                                Name:                           Chong Zi Jian
+                                <br>Contact Number:          018-7637289 
+                                <br>Email:                             zijianchong7@gmail.com
+                            </p>
+                            <hr>
+                            
+                        </div>    
+                    </div>  
                 </div>
             </div>
         </div>
