--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 JV Wealth Advisory. All rights reserved.</p>
+            <p>&copy; 2024 JV Wealth Advisory.</p>
         </div>
     </footer>
     
