--- a/achievement.html
+++ b/achievement.html
@@ -148,7 +148,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Example Company. All rights reserved.</p>
+            <p>&copy; 2024 JV Wealth Advisory.</p>
         </div>
     </footer>
 
