--- a/our_company_zh.html
+++ b/our_company_zh.html
@@ -113,7 +113,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Example Company. All rights reserved.</p>
+            <p>&copy; 2024 JV Wealth Advisory.</p>
         </div>
     </footer>
 
