--- a/v_m_v.html
+++ b/v_m_v.html
@@ -47,7 +47,7 @@
     
     <div class="v_m_v_title">
         <div>
-            <h2>Vission, Mission & Value</h2>
+            <h2>Vision, Mission & Value</h2>
             <p>About us</p>
         </div>
 
